k8s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: harbor.kakor.ovh/ipi/ipi-grp-1-front
          securityContext:
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 80
