k8s/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: back
  ports:
    - port: 5000
      targetPort: 5000
